--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -9,11 +9,16 @@
   background-color: #fff;
   /* display: flex;
   justify-content: space-between; */
+  padding: 0;
+  list-style: none;
+  margin: 0;
 }
 .card__image {
-  min-width: 100%;
-  height: 272px;
-  object-fit: cover;
+  width: 100%;
+  /* height: 272px; */
+  object-position:center;
+  object-fit: contain;
+  object-fit: scale-down;
 }
 .card__button-container {
   display: flex;
