--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -5,7 +5,7 @@
   justify-content: space-between; 
   flex-direction: column;
   min-height: 100vh;
-  /* display: flex; */
+  display: flex;
   flex-grow: 3;
   flex-direction: column;
   min-height: 100vh;
