--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -50,6 +50,8 @@
 }
 .search-form__input {
   width: 100%;
+  height: 50px;
+  align-self: center;
   color: #1a1b22;
   margin: 0 24px;
   padding: 0;
@@ -63,19 +65,20 @@
   outline: none;
 }
 .search-form__label {
-  height: 74px;
+  height: 63px;
   position: absolute;
-  top: -4px;
-  left: -4px;
+  top: -3px;
+  left: -3px;
   display: block;
-  line-height: 30px;
+  /* line-height: 30px; */
   width: calc(100%);
   border-radius: 100px;
    z-index: -1; /*это чтобы нажимался инпут */
 }
 .search-form__input:focus ~ .search-form__label {
-  border: 4px solid #2f71e5;
+  border: 3px solid rgba(0, 77, 211, 0.712);
 }
+
 .search-form__search-button {
   width: 168px;
   height: 64px;
