--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -1,34 +1,41 @@
-.container {
+.preloader {
   padding: 80px 0 24px;
-  margin: auto;
+  margin: 0 auto;
 }
 
-.circle-preloader__text {
+@media screen and (max-width: 768px) {
+  .preloader {
+    padding: 24px 0;
+    margin: 0 auto;
+  }
+}
+
+.preloader__circle {
+  display: block;
+  width: 74px;
+  height: 74px;
+  border: 2px solid rgba(68, 68, 68, 0.726);
+  border-bottom-color: rgb(182, 182, 182);
+  border-radius: 50%;
+  top: 1;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  animation: spin 0.75s infinite linear;
+}
+
+.preloader__text {
   font-family: Roboto;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
   line-height: 24px;
   text-align: center;
-  color: #B6BCBF;
-}
-
-.circle-preloader {
-	display: block;
-  width: 74px;
-  height: 74px;
-	border: 2px solid rgba(68, 68, 68, 0.726);
-	border-bottom-color: rgb(182, 182, 182);
-	border-radius: 50%;
-	top: 1;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	animation: spin .75s infinite linear;
+  color: #b6bcbf;
 }
 
 @keyframes spin {
-	100% {
-		transform: rotate(360deg);
-	}
+  100% {
+    transform: rotate(360deg);
+  }
 }
